TestP4.java: warnings excepto 1 arreglados. Prettier.